[package]
name = "jsonrpc-sdk-client"
version = "0.1.2"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "A simple JSON-RPC client."
homepage = "https://github.com/yangby-cryptape/rust-jsonrpc-sdk"
repository = "https://github.com/yangby-cryptape/rust-jsonrpc-sdk"
keywords = ["jsonrpc"]
categories = ["web-programming"]
license = "Apache-2.0 OR MIT"

[dependencies]
jsonrpc-sdk-prelude = { version = "=0.1.2", path = "../prelude" }
reqwest = "~0.9"
futures = "~0.1"

[badges]
travis-ci = { repository = "yangby-cryptape/rust-jsonrpc-sdk" }
