[package]
name = "jsonrpc-sdk-macros"
version = "0.1.4"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "A internal crate used by jsonrpc-sdk-prelude."
homepage = "https://github.com/yangby-cryptape/rust-jsonrpc-sdk"
repository = "https://github.com/yangby-cryptape/rust-jsonrpc-sdk"
keywords = ["jsonrpc"]
categories = ["web-programming"]
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "~1.0", features = ["full", "extra-traits"] }
quote = "~1.0"
proc-macro2 = "~1.0"

[badges]
travis-ci = { repository = "yangby-cryptape/rust-jsonrpc-sdk" }
