[package]
name = "jsonrpc-sdk-prelude"
version = "0.1.1"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "Common structs and traits for jsonrpc-sdk."
homepage = "https://github.com/yangby-cryptape/rust-jsonrpc-sdk"
repository = "https://github.com/yangby-cryptape/rust-jsonrpc-sdk"
keywords = ["jsonrpc"]
categories = ["web-programming"]
license = "Apache-2.0 OR MIT"

[dependencies]
jsonrpc-sdk-macros = { version = "=0.1.1", path = "../macros" }
log = "~0.4"
jsonrpc-core = "~10.1"
serde_json = "~1.0"
reqwest = "~0.9"

[badges]
travis-ci = { repository = "yangby-cryptape/rust-jsonrpc-sdk" }
